force-app/main/default/objects/Expenses_Line_Item__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>