force-app/main/default/objects/Expenses_Line_Item__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day</label>
    <referenceTo>Day__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>