force-app/main/default/objects/Expenses_Line_Item__c/fields/Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode__c</fullName>
    <label>Travel Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Air - Economy</fullName>
            </value>
            <value>
                <fullName>Train - AC 1 Tier</fullName>
            </value>
            <value>
                <fullName>Train - AC 2 Tier</fullName>
            </value>
            <value>
                <fullName>Train - AC 3 Tier</fullName>
            </value>
            <value>
                <fullName>Train - Sleeper</fullName>
            </value>
            <value>
                <fullName>AC Car</fullName>
            </value>
            <value>
                <fullName>AC Bus</fullName>
            </value>
            <value>
                <fullName>Non-AC Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>