force-app/main/default/objects/Expenses_Line_Item__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>Up country</fullName>
            </value>
            <value>
                <fullName>Person attend</fullName>
                <isActive>false</isActive>
                <label>Person attend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>