force-app/main/default/objects/Expenses_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Date__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>Expense__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>